@@ -22,9 +22,9 @@ clear from the following blowups:
 <p>
 Another typical aspect of hand-engraved scores is the general look of
 the symbols. They almost never have sharp corners. This is because
-sharp corners are fragile and quickly wear out when stamping in metal.
-The general rounded shape of music symbols is also present in all
-glyphs of our "Feta" font.
+sharp corners of the punching dies are fragile and quickly wear out
+when stamping in metal.  The general rounded shape of music symbols is
+also present in all glyphs of our "Feta" font.
 
 
 
