@@ -133,7 +133,27 @@
     <td>2.2.0</td>
     <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
   </tr>
+
+
   
+  <tr>
+    <td><p align="center"><img src="@IMAGES@suse-logo.png"></p></td>
+    <td>
+      SUSE
+    </td>
+    <td>
+      9.2
+    </td>
+    <td>
+      <em>Included
+	<a
+	href="ftp://ftp.suse.com/pub/suse/i386/9.2/suse/src/">with distribution</a></em>
+    </td>
+    <td>2.2.6</td>
+    <td><a href="http://www.suse.com">SUSE</a></td>
+  </tr>
+
+      
   <tr>
     <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
     <td>
@@ -522,6 +542,25 @@ LilyPond 2.3 requires the <tt>ec-fonts-mftraced</tt> package from
     </td>
     <td>2.0.1</td>
     <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+  
+  <tr>
+    <td><p align="center"><img src="@IMAGES@suse-logo.png"></p></td>
+    <td>
+      SUSE
+    </td>
+    <td>
+      
+    </td>
+    <td>
+      <em>included
+	<a
+	href="ftp://ftp.suse.com/pub/suse/i386/current/suse/i586/lilypond-2.0.3-48.i586.rpm">with
+	distribution</a></em>
+    </td>
+    <td>2.0.3</td>
+    <td><a href="http://www.suse.com">SUSE</a></td>
   </tr>
 
   
