@@ -24,6 +24,23 @@ Orm Finnendahl, professor of Composition, Musikhochschule Freiburg
 </a></em>
 
 <p>
+&ldquo;
+I've been an enthousiast user of Lilypond for over two years now, and
+the last piece I worked on is a cimbalom concerto I wrote  [..]
+[..after the first orchestra rehearsal] I got numerous compliments about the
+quality of the scores.
+<p>
+Even more importantly, while Lilypond provides numerous hacks to improve
+the way its scores look, what the orchestra got from me is basically the
+raw, untouched output.
+&rdquo;
+<p align=right>
+<em>Darius Blasband, composer (Brussels, Belgium)
+</em></p>
+
+
+
+<p>
 	&ldquo;thanks and kudos to the development team for their incredible
 	work. I've never seen anything approaching the output that I get from
 	Lilypond -- I'm totally confident that my music publishing needs will
